Chore: Update `VersionCommand` to use `getFirst()` for argument retrieval